data/derived/comb/progs/unify/prog8482.ml.out
Characters 109-112:
  | Sine sin		    -> "sin(pi*"^ (eval sin) ^")" 
                                      ^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
